--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@types/pg": "^8.15.5",
     "next": "15.4.6",
     "pg": "^8.16.3",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
