Update the shitty AI generated Dockerfile.

--- a/backend_logging/Dockerfile
+++ b/backend_logging/Dockerfile
@@ -1,5 +1,5 @@
 # Use official Bun image as base
-FROM oven/bun:1.0.35
+FROM oven/bun:1.2-debian
 
 # Set working directory
 WORKDIR /app
@@ -13,11 +13,5 @@ RUN bun install --frozen-lockfile
 # Copy the rest of the application
 COPY . .
 
-# Build the application
-RUN bun build ./app/app.ts --outdir ./dist
-
 # Start the application
 CMD ["bun", "run", "start"]
-
-# Expose port if needed (adjust according to your app's configuration)
-EXPOSE 3000
