--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/pg": "^8.15.5",
+    "better-auth": "^1.3.4",
     "next": "15.4.6",
     "pg": "^8.16.3",
     "postgres": "^3.4.7",
